--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="msapplication-starturl" content="/">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Cold Drip Timer</title>
-
+    <title>Mug Math</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet" defer>
 </head>
