--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="msapplication-starturl" content="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mug Math</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet" defer></link>
@@ -18,6 +18,10 @@
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <div id="app"></div>
-
+    <noscript>
+      <div class="no-script" style="position: absolute; left: 50%; top: 33%; transform: translate(-50%,-50%); width: 40em; height: 10em; background-color: #fff; padding: 2em; font-size: 1.2em">
+        <p>You have turned off javascript or your browser does not support it. You'll have to enable it or use a different browser to us MugMath! :( </p>
+      </div>
+    </noscript>
 </body>
 </html>
