fixed time picker issues and added helper text

--- a/src/index.html
+++ b/src/index.html
@@ -23,5 +23,7 @@
         <p>You have turned off javascript or your browser does not support it. You'll have to enable it or use a different browser to us MugMath! :( </p>
       </div>
     </noscript>
+    <div></div>
+    <div></div>
 </body>
 </html>
