optimizing and updating packages

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="msapplication-starturl" content="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#000000"/>
     <title>Mug Math</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet" defer></link>
