setup react router v4 server rendering and beginning testing

--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,11 @@
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <div id="app"></div>
-    <noscript>
+    <!-- <noscript>
       <div class="no-script" style="position: absolute; left: 50%; top: 33%; transform: translate(-50%,-50%); width: 40em; height: 10em; background-color: #fff; padding: 2em; font-size: 1.2em">
         <p>You have turned off javascript or your browser does not support it. You'll have to enable it or use a different browser to us MugMath! :( </p>
       </div>
-    </noscript>
+    </noscript> -->
     <div></div>
     <div></div>
 </body>
