fixed bugs...animations on load and subapp position on large screens

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet" defer></link>
 </head>
-<body>
+<body class="preload">
   <script>window.__PRELOADED_STATE__;</script>
     <!--[if lt IE 8]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
